# bp_ecg_etl

./: .gitignore  README.md  deploy_simple.sh  deploy_to_localstack.py  docker-compose.yml  pyproject.toml  requirements-lambda.txt  template.yaml  test-event.json  test_automatic_trigger.py  test_function.py  verify_anonymization.py
bp_ecg_etl/: __init__.py  config.py  lambda_main.py  logging_config.py  main.py  pdf_anonymizer.py  requirements.txt  s3_utils.py
bp_ecg_etl/config/: __init__.py  settings.py
bp_ecg_etl/core/: __init__.py  pdf_processor.py  s3_client.py
bp_ecg_etl/types/: __init__.py  models.py
docs/: local_test.md
src/: main.py
src/config/: dynamodb.py
src/types/: __init__.py  exam.py
tests/: __init__.py
tests/integration/: test_lambda_handler.py
tests/unit/: test_pdf_processor.py
