[project]
name = "bp-ecg-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.36.21",
    "docling>=2.22.0",
    "pydantic>=2.10.6",
    "awswrangler>=3.11.0",
    "dask>=2025.2.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
