[project]
name = "bp-ecg-etl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.0.0",
    "boto3>=1.38.27",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "pymupdf>=1.24.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "aws-lambda-typing>=2.20.0",
    "wheel>=0.45.1",
]

[project.scripts]
# SAM CLI scripts for local testing
sam-build = "sam build --template deployment/template.yaml"
sam-invoke = "sam local invoke BpEcgEtlFunction --event deployment/events/test-event.json --template deployment/template.yaml"
sam-deploy = "sam deploy --guided --template deployment/template.yaml"
